[tool.poetry]
name = "umuttepe-hava-botu"
version = "1.0.0"
description = "Twitter bot that tweets about Umuttepe weather conditions."
authors = ["Sinan Bekar <sinanbekar.work@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/sinanbekar/umuttepe-hava-botu"
repository = "https://github.com/sinanbekar/umuttepe-hava-botu"
documentation = "https://umuttepe-hava-botu.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/sinanbekar/umuttepe-hava-botu/releases"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python-headless = "^4.6.0"
tweepy = "^4.10.1"
redis = "^4.5.5"
m3u8 = "^3.3.0"
requests = "^2.28.1"
types-requests = "^2.28.10"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
azure-functions = "^1.11.3"
python-dotenv = "0.19.0"
pytest-mock = "^3.8.2"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["umuttepe_hava_botu", "tests"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
